force-app/main/default/objects/League_Config__c/League_Config__c.object-meta.xml
<CustomObject>
    <description>Configuration for ESPN league sync behavior with quota management</description>
    <label>League Configuration</label>
    <nameField>
        <label>Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>League Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>