force-app/main/default/objects/League_Config__c/fields/API_Calls_Today__c.field-meta.xml
<CustomField>
    <fullName>API_Calls_Today__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Current usage (reset daily)</description>
    <label>API Calls Today</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>