force-app/main/default/objects/League_Config__c/fields/API_Quota_Allocated__c.field-meta.xml
<CustomField>
    <fullName>API_Quota_Allocated__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Max API calls per day</description>
    <label>API Quota Allocated</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>