force-app/main/default/objects/League_Config__c/fields/Competition__c.field-meta.xml
<CustomField>
    <fullName>Competition__c</fullName>
    <description>Competition to sync</description>
    <label>Competition</label>
    <referenceTo>Competition__c</referenceTo>
    <relationshipLabel>League Configurations</relationshipLabel>
    <relationshipName>League_Configurations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>