force-app/main/default/objects/League_Config__c/fields/Consecutive_Failures__c.field-meta.xml
<CustomField>
    <fullName>Consecutive_Failures__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Count of consecutive sync failures</description>
    <label>Consecutive Failures</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>