force-app/main/default/objects/League_Config__c/fields/ESPN_League_ID__c.field-meta.xml
<CustomField>
    <fullName>ESPN_League_ID__c</fullName>
    <description>ESPN league identifier (e.g., eng.1, usa.nwsl)</description>
    <externalId>true</externalId>
    <label>ESPN League ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>