force-app/main/default/objects/League_Config__c/fields/Health_Status__c.field-meta.xml
<CustomField>
    <fullName>Health_Status__c</fullName>
    <description>Auto-calculated health based on last sync time</description>
    <formula>IF(Last_Full_Sync__c &gt; NOW() - 2, "Healthy", 
IF(Last_Full_Sync__c &gt; NOW() - 6, "Degraded", "Failed"))</formula>
    <label>Health Status</label>
    <type>Text</type>
</CustomField>