force-app/main/default/objects/League_Config__c/fields/Last_Full_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_Full_Sync__c</fullName>
    <description>Timestamp of last successful sync</description>
    <label>Last Full Sync</label>
    <type>DateTime</type>
</CustomField>