force-app/main/default/objects/League_Config__c/fields/Next_Sync__c.field-meta.xml
<CustomField>
    <fullName>Next_Sync__c</fullName>
    <description>Scheduled next sync time</description>
    <label>Next Sync</label>
    <type>DateTime</type>
</CustomField>