force-app/main/default/objects/League_Config__c/fields/Season__c.field-meta.xml
<CustomField>
    <fullName>Season__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Target season for syncing</description>
    <label>Season</label>
    <referenceTo>Season__c</referenceTo>
    <relationshipLabel>League Configurations</relationshipLabel>
    <relationshipName>League_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>