force-app/main/default/objects/League_Config__c/fields/Sync_Awards__c.field-meta.xml
<CustomField>
    <fullName>Sync_Awards__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sync player awards</description>
    <label>Sync Awards</label>
    <type>Checkbox</type>
</CustomField>