force-app/main/default/objects/League_Config__c/fields/Sync_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Sync_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable/disable sync for this league</description>
    <label>Sync Enabled</label>
    <type>Checkbox</type>
</CustomField>