force-app/main/default/objects/League_Config__c/fields/Sync_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Sync_Frequency__c</fullName>
    <description>How often to sync</description>
    <label>Sync Frequency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Real-Time</fullName>
            </value>
            <value>
                <fullName>Every 5 Minutes</fullName>
            </value>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
                <default>true</default>
                <label>Daily</label>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>