force-app/main/default/objects/League_Config__c/fields/Sync_Live_Scores__c.field-meta.xml
<CustomField>
    <fullName>Sync_Live_Scores__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable real-time score updates</description>
    <label>Sync Live Scores</label>
    <type>Checkbox</type>
</CustomField>