force-app/main/default/objects/League_Config__c/fields/Sync_Matches__c.field-meta.xml
<CustomField>
    <fullName>Sync_Matches__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Sync matches (renamed from Sync_Fixtures__c)</description>
    <label>Sync Matches</label>
    <type>Checkbox</type>
</CustomField>