force-app/main/default/objects/League_Config__c/fields/Sync_Priority__c.field-meta.xml
<CustomField>
    <fullName>Sync_Priority__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Priority (1=highest, 5=lowest)</description>
    <label>Sync Priority</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>