force-app/main/default/objects/League_Config__c/fields/Sync_Rosters__c.field-meta.xml
<CustomField>
    <fullName>Sync_Rosters__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Sync player rosters</description>
    <label>Sync Rosters</label>
    <type>Checkbox</type>
</CustomField>