force-app/main/default/objects/League_Config__c/fields/Sync_Teams__c.field-meta.xml
<CustomField>
    <fullName>Sync_Teams__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Sync teams for this league</description>
    <label>Sync Teams</label>
    <type>Checkbox</type>
</CustomField>